# tb3

./: .gitignore  README.md  setup.py
docs/: 00_version_history.md  10_flashing_the_robot.md  20_networking.md  30_camera_setup.md  40_setup_troubleshooting.md  50_creating_ros_packages.md  60_simulation.md  99_setup_troubleshooting.md  README.md  main.typ
object/: .$AICE_ArUco.svg.bkp  README.md  aruco_layout.md  v3_annotated.dxf  v3_block.scad
scripts/: README.md  auto_comp.sh  setup_u22_gazebo.sh  setup_u22_tb3.sh  tb3_env.sh
scripts/setup/: tb3.sh
sim/: README.md
sim/aice_sim/: CMakeLists.txt  package.xml
sim/aice_sim/launch/: sim.launch.py
sim/aice_sim/models/v3_block/: model.config  model.sdf
sim/aice_sim/models/v3_block/meshes/: v3_block.stl
sim/aice_sim/worlds/: world.world
sim/scripts/: README.md  auto_comp.sh  setup_u22_tb3.sh  tb3_env.sh  tb3_poweroff.py  terminal.py
sim/scripts/setup/: ros.sh  tb3.sh
